src/objects/ensxapp__SAP_Material_Search_Mapping__mdt.object
<CustomObject>
    <description>Configure SAP material search fields and their mapping to Product2 fields</description>
    <fields>
        <fullName>ensxapp__Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should the user be able to alter the search criteria?</description>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>SAP_Material_Search_Mappings</relationshipLabel>
        <relationshipName>SAP_Material_Search_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Parent__c</fullName>
        <label>SAP Material Setting</label>
        <referenceTo>ensxapp__SAP_Material_Settings__mdt</referenceTo>
        <relationshipLabel>SAP Material Search Mappings</relationshipLabel>
        <relationshipName>SAP_Material_Search_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Product2_Field__c</fullName>
        <description>The product field used to pre-populate the search criteria</description>
        <label>Product2 Field</label>
        <metadataRelationshipControllingField>ensxapp__SAP_Material_Search_Mapping__mdt.ensxapp__Entity__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>SAP_Material_Search_Mappings</relationshipLabel>
        <relationshipName>SAP_Material_Search_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Field__c</fullName>
        <description>The SAP Material field to search</description>
        <label>SAP Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MaterialDescription</fullName>
                    <default>true</default>
                    <label>MaterialDescription</label>
                </value>
                <value>
                    <fullName>MaterialGroup</fullName>
                </value>
                <value>
                    <fullName>MaterialType</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should the search field be visible on the SAP Material Link page?</description>
        <inlineHelpText>If the Product2 Field is mapped and the field is not visible, it will still apply the product value as search criteria</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>SAP Material Search Mapping</label>
    <pluralLabel>SAP Material Search Mappings</pluralLabel>
</CustomObject>